Bug 1400751 - Bookmark star and Pocket animations are misaligned in touch mode. r=Gijs
MozReview-Commit-ID: 1znCd1vrLpF

UltraBlame original commit: ff7917ed161f04e2dd107c0c16a7b54437ef65c6

--- a/browser/extensions/pocket/skin/shared/pocket.css
+++ b/browser/extensions/pocket/skin/shared/pocket.css
@@ -64,7 +64,7 @@
   margin-inline-start: 2px;
 }
 
-:root[uidensity=touch] #star-button-box[animationsenabled] > #star-button[starred][animate] + #star-button-animatable-box {
+:root[uidensity=touch] #pocket-button-box[animate="true"] > #pocket-animatable-box {
   
   margin-inline-start: 5px;
 }
